- Доработана страничка профиля
- Сделана форма редактирования профиля

26 Июня:
- Обновление карточек Idea
- Добавление Footer
- Отображение Idea в профиле пользователя

27 Июня:
- Модальные окна к Delete / Update комментариев
- Нормальный вид отображения всех пользователей
- Обновление фронтэнда Idea/Category/Comment

28 Июня:
- Система лайков для Idea (Like + Dislike)
- Система лайков для Comment (Like only)
- Обновление фронтэнда (icons + tooltips)

30 Июня:
- Добавление статусов Idea (active, pending, completed)

3 Июля:
- Создана модель partnership и отображение соавторов идеи
- Создана модель investment и отображение инвесторов идеи

5 Июля:
- Выпадающий список Профиля пользователя
- Система уведомлений (Liked/DisLiked Idea)



СДЕЛАТЬ ПОСЛЕ:
- Избранные Idea
- Доработать меню пользователя
- Система DM
- Уведомления Follow, Favourite, Investment, Rating, Partnership, DM
- Сделать View для IdeaStatus (чтобы одним нажатием менялся статус)
- Сделать View для Co-Authors
- Сделать View для Investors


Пофиксить:
- Модальное окно Update comment - не перезагружает страницу после успешного обновления
- Изменить главную:
Help others to implement their Ideas
Start from exploration of all the Ideas and become Co-Authors or Investor
Create your own Idea if you have any


СДЕЛАТЬ:
- Доработать Partnership, Investment
- Сделать Rating
- Значки для групп
- Система уведомлений
- Обновить ссылки Footer
- Попробовать подключить API платежи для Investments
- Ветвление комментариев
- Фильтрация по категориям
- Доработать Users (Вывод по группам)
- Категории на главной странице в виде движущейся ленты
- Подключить postgress
- Комментарии (добавить update вместо publicly если произошел update)
- Сделать Docker compose для запуска всех приложений
- Доработать форму Contacts (можно через модальное окно)
- Доработать Search
- Оптимизация SQL запросов

ВОПРОСЫ:
- Добавление нескольких изображений в одну модель (через другую модель?)