@@ -1,5 +1,7 @@
 from django.db import models
 from django.contrib.auth.models import AbstractUser
+from django.db.models.signals import post_save, post_delete
+from common_imports.validation import notifications_import
 
 
 class User(AbstractUser):
@@ -18,3 +20,28 @@ class User(AbstractUser):
 
     def check_in_group(self, group_name):
         return self.groups.filter(name=group_name).exists()
+
+class Follow(models.Model):
+    follower = models.ForeignKey(User, on_delete=models.CASCADE, related_name='follower')
+    following = models.ForeignKey(User, on_delete=models.CASCADE, related_name='following')
+
+    def user_follow(sender, instance, *args, **kwargs):
+        notif = notifications_import()
+        follow = instance
+        sender = follow.follower
+        following = follow.following
+        notify = notif(sender=sender, user=following, notification_type=4)
+        notify.save()
+
+    def user_unfollow(sender, instance, *args, **kwargs):
+        notif = notifications_import()
+        follow = instance
+        sender = follow.follower
+        following = follow.following
+
+        notify = notif.objects.filter(sender=sender, user=following, notification_type=4)
+        notify.delete()
+
+
+post_save.connect(Follow.user_follow, sender=Follow)
+post_delete.connect(Follow.user_unfollow, sender=Follow)
