@@ -95,6 +95,8 @@ User
 - Выпадающий список Профиля пользователя
 - Система уведомлений (Liked/DisLiked Idea)
 
+6 Июля:
+- Система подписок (Follower/Following)
 
 
 СДЕЛАТЬ ПОСЛЕ:
